testsuite/tests/typing-misc/pr6939.ml.reference

#   Characters 13-20:
  let rec x = [| x |]; 1.;;
              ^^^^^^^
Warning 10: this expression should have type unit.
Characters 13-24:
  let rec x = [| x |]; 1.;;
              ^^^^^^^^^^^
Error: This kind of expression is not allowed as right-hand side of `let rec'
#   Characters 17-18:
  let rec x = let u = [|y|] in 10. and y = 1.;;
                  ^
Warning 26: unused variable u.
Characters 13-33:
  let rec x = let u = [|y|] in 10. and y = 1.;;
              ^^^^^^^^^^^^^^^^^^^^
Error: This kind of expression is not allowed as right-hand side of `let rec'
# 
