testsuite/tests/typing-misc/pr6939.ml

let rec x = [| x |]; 1.;;

let rec x = let u = [|y|] in 10. and y = 1.;;
